--- a/Projects/MoGo/style.css
+++ b/Projects/MoGo/style.css
@@ -1,3 +1,61 @@
+/* ------------- NAVBAR -------------- */
+.navbar {
+  background-color: transparent !important;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, 0);
+}
+
+.navbar .navbar-nav .nav-link {
+  color: #fff;
+}
+
+.navbar .navbar-nav .nav-link:hover {
+  color: #fce289;
+}
+
+.navbar .navbar-nav i {
+  cursor: pointer;
+  color: #fff;
+}
+
+.navbar .navbar-nav li {
+  display: flex;
+  align-items: center;
+}
+
+.navbar .navbar-nav i:hover {
+  color: #fce289;
+}
+
+.navbar .navbar-nav .nav-item {
+  position: relative;
+  margin-left: 2rem;
+}
+
+.navbar .navbar-nav .nav-item::after {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  background-color: #fce289;
+  width: 0%;
+  content: "";
+  height: 4px;
+  transition: all 0.5s;
+}
+
+.navbar .navbar-nav .nav-item:hover::after {
+  width: 65%;
+}
+
+.navbar-brand {
+  color: #fff !important;
+  font-family: "Montserrat", sans-serif;
+  margin-right: 10rem;
+}
+
 /* ------------- BANNER -------------- */
 #banner {
   height: 100vh;
@@ -11,6 +69,8 @@
       rgba(252, 226, 137, 0.9)
     ),
     url(/assets/Layer\ 15.png);
+  background-position: center;
+  background-attachment: fixed;
 }
 
 #banner h1 {
