--- a/Projects/MoGo/style.css
+++ b/Projects/MoGo/style.css
@@ -22,6 +22,8 @@
 .navbar .navbar-nav li {
   display: flex;
   align-items: center;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
 }
 
 .navbar .navbar-nav i:hover {
@@ -53,12 +55,13 @@
 .navbar-brand {
   color: #fff !important;
   font-family: "Montserrat", sans-serif;
+  font-weight: 700 !important;
   margin-right: 10rem;
 }
 
 /* ------------- BANNER -------------- */
 #banner {
-  height: 100vh;
+  height: 115vh;
   display: flex;
   align-items: center;
   background-repeat: no-repeat;
@@ -70,7 +73,10 @@
     ),
     url(/assets/Layer\ 15.png);
   background-position: center;
-  background-attachment: fixed;
+}
+
+#banner .container {
+  position: relative;
 }
 
 #banner h1 {
@@ -84,5 +90,64 @@
 
 #banner h1:last-child {
   font-family: "Montserrat", sans-serif;
+  font-weight: 700;
   font-size: 6rem;
+}
+
+.other-link {
+  display: inline-block;
+  padding: 0.4rem 2.5rem;
+  margin-top: 2.5rem;
+  text-align: center;
+  margin-top: 3rem;
+}
+
+.other-link a {
+  font-family: "Montserrat", sans-serif;
+  color: #fff;
+  letter-spacing: 1.5px;
+  text-decoration: none;
+  text-transform: uppercase;
+  border: 4px solid #fff;
+  padding: 0.5rem 1rem;
+}
+
+.line {
+  display: block;
+  background-color: #fff;
+  margin-top: 1rem;
+  height: 0.2rem;
+  width: 4rem;
+  margin-top: 2rem;
+}
+
+.progress {
+  border-radius: 0;
+  height: 0.1rem;
+  margin-bottom: 0.9rem;
+}
+
+.progress-bar {
+  background-color: #e88383;
+}
+
+.banner-bottom {
+  position: absolute;
+  width: 100%;
+  padding: 0 8rem;
+  bottom: -9rem;
+}
+
+.banner-bottom h6 {
+  font-size: 1.25rem;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  color: #fff;
+  display: inline;
+}
+
+.banner-bottom span {
+  font-size: 0.8rem;
+  font-family: "Montserrat", sans-serif;
+  color: #fff;
 }
