--- a/Projects/MoGo/style.css
+++ b/Projects/MoGo/style.css
@@ -1,3 +1,18 @@
+.section-title1 {
+  font-family: "Kaushan Script", cursive;
+}
+.section-title2 {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+}
+.section-divider {
+  display: block;
+  background-color: #e88383;
+  height: 0.2rem;
+  width: 4rem;
+  margin: 3rem 0;
+}
+
 /* ------------- NAVBAR -------------- */
 .navbar {
   background-color: transparent !important;
@@ -150,4 +165,240 @@
   font-size: 0.8rem;
   font-family: "Montserrat", sans-serif;
   color: #fff;
+}
+
+/* ------------- ABOUT -------------- */
+#about {
+  padding: 7rem 0;
+}
+
+#about p {
+  color: #999999;
+  padding: 0 8rem;
+}
+
+#about .container {
+  padding: 0 8rem;
+}
+
+#about .images {
+  margin-top: 3rem;
+}
+
+.line2 {
+  display: block;
+  background-color: #e88383;
+  height: 0.2rem;
+  width: 4rem;
+  margin: 3rem 0;
+}
+
+.image-container {
+  overflow: hidden;
+  width: 275px;
+  height: 200px;
+}
+
+.image-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+/* ------------- FACTS -------------- */
+#facts {
+  background-color: #95e1d3;
+  padding: 4rem 15rem;
+  color: #fff;
+}
+
+#facts h1 {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  font-size: 3rem;
+}
+
+#facts h6 {
+  font-size: 0.8rem;
+}
+
+#facts .row .col {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+/* ------------- SERVICE -------------- */
+#service {
+  padding: 7rem 0;
+}
+
+#service .container {
+  padding: 0 8rem;
+}
+
+#service .services .row .col-9 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+#service .services .row .col-10 h6 {
+  font-family: "Montserrat", sans-serif;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 2;
+}
+
+#service .services .row .col-10 p {
+  font-size: 15px;
+  color: #999999;
+  font-family: "Roboto", sans-serif;
+}
+
+#service .services .row img {
+  margin-top: 0.5rem;
+}
+
+#service hr {
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+  /* style hr */
+  border: 0;
+  height: 1px;
+  background-color: rgba(139, 135, 135, 0.493);
+}
+
+/* ------------- FEATURE -------------- */
+#feature {
+  padding: 7rem 0 0 0;
+  display: flex;
+  align-items: center;
+  display: block;
+  position: relative;
+}
+
+#feature::after {
+  content: "";
+  background: url(./assets/bgRiver.png);
+  opacity: 0.2;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  position: absolute;
+  z-index: -1;
+}
+
+#feature .phone {
+  position: absolute;
+  bottom: -5.5rem;
+  right: 18rem;
+}
+
+/* ------------- SERVICE-2 -------------- */
+
+#service-2 {
+  padding: 10rem 0 7rem 0;
+}
+
+#service-2 .container {
+  padding: 0 8rem;
+}
+
+#service-2 p {
+  color: #999999;
+  padding: 0 8rem;
+}
+
+#service-2 p {
+  margin-bottom: 5rem;
+}
+
+#service-2 .image {
+  overflow: hidden;
+  height: 300px;
+}
+
+#service-2 .image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+#service-2 .accordion-item {
+  border-radius: 0;
+  border-color: #d1cbcb69;
+}
+
+#service-2 button span {
+  font-family: "Montserrat", sans-serif;
+  font-size: 14px;
+  font-weight: 600;
+}
+
+#service-2 button {
+  color: #000;
+  border-color: rgba(146, 148, 142, 0.125);
+  box-shadow: none;
+  height: 3rem;
+  border-top: 1px solid rgba(177, 171, 171, 0.125);
+}
+
+#service-2 button:focus {
+  background-color: #fff;
+}
+
+#service-2 .accordion-body {
+  font-family: "Roboto", sans-serif;
+  font-style: italic;
+  color: #9999;
+  max-height: 6.5rem;
+  overflow: scroll;
+  overflow-x: hidden;
+}
+
+#service-2 .accordion-body::-webkit-scrollbar {
+  width: 8px;
+}
+
+#service-2 .accordion-body::-webkit-scrollbar-track {
+  background: rgba(167, 165, 165, 0.125);
+}
+
+#service-2 .accordion-body::-webkit-scrollbar-thumb {
+  background-color: #95e1d3;
+  border-radius: 20px;
+}
+
+.accordion-button:after {
+  background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%239999'><path fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/></svg>") !important;
+}
+
+#service-2 .accordion-item {
+  margin-bottom: 1rem;
+}
+
+/* ------------- QOUTE -------------- */
+#qoute {
+  padding: 4rem 0;
+  background-color: #f8f8f8;
+  /* background-color: #95e1d3; */
+}
+
+#qoute .container {
+  padding: 0 3rem;
+}
+
+#qoute .carousel-item {
+  padding: 0 7rem;
+  font-family: "Roboto", sans-serif;
+  font-style: italic;
+  color: #9999;
+}
+
+#qoute .carousel-item img {
+  border: 3px solid #95e1d3;
+  padding: 2rem;
+  height: 7rem;
 }
