--- a/Projects/MoGo/style.css
+++ b/Projects/MoGo/style.css
@@ -1,3 +1,8 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+}
+
 .section-title1 {
   font-family: "Kaushan Script", cursive;
 }
@@ -514,10 +519,6 @@
   padding: 5rem 0 0 0;
 }
 
-#work .container {
-  padding: 0 8rem;
-}
-
 #work p {
   color: #999999;
   font-family: "Roboto", sans-serif;
@@ -526,8 +527,8 @@
 }
 
 #work .left-images {
-  width: 227px;
-  height: 200px;
+  width: 25vw;
+  height: 280px;
   overflow: hidden;
 }
 
@@ -544,11 +545,11 @@
 }
 
 #work .left-image1 {
-  object-position: -1px -7rem;
+  object-position: -1px -13rem;
 }
 
 #work .left-image2 {
-  object-position: -1px -6rem;
+  object-position: -1px -11rem;
 }
 
 #work .left-image3 {
@@ -556,14 +557,59 @@
 }
 
 #work .right-image-1 {
-  height: 400px;
-  width: 227px;
+  height: 560px;
+  width: 25vw;
 }
 
 #work .right-image-2 {
-  height: 200px;
+  height: 280px;
 }
 
 #work .right-image-3 {
   object-position: -0rem -1rem;
+}
+
+/* ------------- TESTIMONIAL -------------- */
+
+#testimonial {
+  padding: 5rem 0;
+}
+
+#testimonial .container {
+  padding: 0 3rem;
+}
+
+#testimonial .profile {
+  border-radius: 50%;
+  overflow: hidden;
+  height: 8rem;
+  width: 8rem;
+}
+
+#testimonial .carousel-item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transform: scale(1.3);
+}
+
+#testimonial .carousel-item {
+  padding: 0 7rem;
+  font-family: "Roboto", sans-serif;
+  font-style: italic;
+  color: #9999;
+}
+
+#testimonial .carousel-item h4 {
+  font-family: "Kaushan Script", cursive;
+  color: #000;
+  font-size: 24px;
+}
+
+#testimonial .carousel-control-next-icon {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%239999'%3e%3cpath d='M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e") !important;
+}
+
+#testimonial .carousel-control-prev-icon {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%239999'%3e%3cpath d='M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z'/%3e%3c/svg%3e");
 }
