--- a/Projects/MoGo/style.css
+++ b/Projects/MoGo/style.css
@@ -275,7 +275,6 @@
 #service hr {
   margin-top: 3rem;
   margin-bottom: 3rem;
-  /* style hr */
   border: 0;
   height: 1px;
   background-color: rgba(139, 135, 135, 0.493);
@@ -612,4 +611,300 @@
 
 #testimonial .carousel-control-prev-icon {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%239999'%3e%3cpath d='M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z'/%3e%3c/svg%3e");
+}
+
+/* ------------- PEOPLE -------------- */
+#people {
+  padding: 7rem 0;
+  display: block;
+  position: relative;
+}
+
+#people::after {
+  content: "";
+  background: url(./assets/bgMountain.png);
+  opacity: 0.1;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  position: absolute;
+  z-index: -1;
+}
+
+#people .container {
+  padding: 0 8rem;
+}
+
+#people .clients h5 {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
+  font-size: 14px;
+}
+
+#people .clients span {
+  font-family: "Roboto", sans-serif;
+  font-size: 15px;
+  font-style: italic;
+}
+
+#people .clients p {
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
+  font-size: 15px;
+  color: #9999;
+}
+
+#people .clients .dash {
+  margin: 1rem 0;
+}
+
+#people .clients .avatar {
+  overflow: hidden;
+  width: 6rem;
+  height: 6rem;
+  border-radius: 50%;
+}
+
+#people .clients img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+#people .client-1 {
+  transform: scale(1.5);
+  object-position: -1.5rem 1rem;
+}
+
+#people .client-2 {
+  transform: scale(2);
+  object-position: -0.25rem -1.5rem;
+}
+
+#people .client-3 {
+  transform: scale(1.4);
+  object-position: -1.7rem 0.5rem;
+}
+
+#people .client-4 {
+  transform: scale(4);
+  object-position: 1.1rem 1.75rem;
+}
+
+/* ------------- BLOG -------------- */
+#blog {
+  padding: 7rem 0;
+}
+
+#blog .container {
+  padding: 0 7rem;
+}
+
+#blog img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+#blog .image-story {
+  overflow: hidden;
+  position: relative;
+  height: 192.7px;
+}
+
+#blog .image-story .image-1 {
+  transform: scale(1.4);
+  object-position: -2.5rem -1.6rem;
+  position: relative;
+}
+
+#blog .image-story .image-2 {
+  transform: scale(1);
+  object-position: -1rem 0;
+  position: relative;
+}
+
+#blog h5 {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
+  font-size: 14px;
+  text-transform: capitalize;
+  margin-top: 1rem;
+}
+
+#blog p {
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
+  font-size: 15px;
+  color: #b3b3b3;
+}
+
+#blog .bi {
+  color: #95e1d3;
+}
+
+#blog .icons span {
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
+  font-size: 15px;
+  color: #b3b3b3;
+  font-style: italic;
+  display: inline;
+}
+
+#blog .main-col {
+  position: relative;
+  height: 100%;
+}
+
+#blog .box {
+  width: 3.8rem;
+  height: 4.5rem;
+  background: #95e1d3;
+  position: absolute;
+  top: 6.8rem;
+  left: 0rem;
+  z-index: 10;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: -1rem !important;
+  padding: 0.5rem;
+}
+
+#blog .box h4 {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  font-size: 30px;
+}
+
+#blog .box span {
+  font-family: "Roboto", sans-serif;
+  font-size: 15px;
+  font-style: italic;
+  position: relative;
+  top: -0.8rem;
+}
+
+/* ------------- MAP -------------- */
+#map {
+  padding: 5rem 0 1rem 0;
+  color: #e88383;
+  display: block;
+  position: relative;
+}
+
+#map::after {
+  content: "";
+  background: url(./assets/map.png);
+  opacity: 0.2;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  position: absolute;
+  z-index: -1;
+}
+
+#map .bi {
+  font-size: 2rem;
+}
+
+/* ------------- FOOTER -------------- */
+
+footer {
+  padding: 7rem 0;
+  background-color: #f8f8f8;
+}
+
+footer .container {
+  /* padding: 0 7rem; */
+}
+
+footer h1 {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 800;
+  font-size: 46px;
+  color: #cccccc;
+}
+
+footer p {
+  font-family: "Roboto", sans-serif;
+  color: #cccccc;
+}
+
+footer .followers {
+  font-family: "Montserrat", sans-serif;
+  font-size: 14px;
+}
+
+footer .followers span {
+  font-weight: 700;
+  font-size: 18px;
+}
+
+footer .social span {
+  font-family: "Roboto", sans-serif;
+  font-size: 15px;
+  color: #cccccc;
+  font-style: italic;
+  display: inline;
+}
+
+footer .social i {
+  cursor: pointer;
+  color: #95e1d3;
+}
+
+footer .form-control {
+  border-radius: 0;
+  border-color: #ced4da;
+  height: 3rem;
+}
+
+footer .form-control:focus {
+  box-shadow: none;
+  border-radius: 0;
+  border-color: #ced4da;
+}
+
+footer .form-control::placeholder {
+  font-family: "Roboto", sans-serif;
+  color: #cccccc;
+  font-style: italic;
+}
+
+footer .btn {
+  background-color: #95e1d3;
+  border-radius: 0;
+  color: #fff;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  padding: 0 2rem;
+}
+
+footer .blogs-image {
+  overflow: hidden;
+  width: 8.8rem;
+}
+
+footer .blogs img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+footer h6 {
+  font-family: "Montserrat", sans-serif;
+  font-size: 12px;
+  font-weight: 600;
+}
+
+footer span {
+  font-family: "Roboto", sans-serif;
+  font-size: 15px;
+  color: #cccccc;
+  font-style: italic;
 }
