--- a/Projects/MoGo/style.css
+++ b/Projects/MoGo/style.css
@@ -815,7 +815,7 @@
 /* ------------- FOOTER -------------- */
 
 footer {
-  padding: 7rem 0;
+  padding-top: 7rem;
   background-color: #f8f8f8;
 }
 
@@ -830,7 +830,7 @@ footer h1 {
   color: #cccccc;
 }
 
-footer p {
+footer .mogo p {
   font-family: "Roboto", sans-serif;
   color: #cccccc;
 }
@@ -887,7 +887,7 @@ footer .btn {
 
 footer .blogs-image {
   overflow: hidden;
-  width: 8.8rem;
+  width: 9.5rem;
 }
 
 footer .blogs img {
@@ -902,9 +902,43 @@ footer h6 {
   font-weight: 600;
 }
 
-footer span {
+footer .blogs span {
   font-family: "Roboto", sans-serif;
   font-size: 15px;
   color: #cccccc;
   font-style: italic;
+}
+
+footer .insta .insta-image {
+  width: 6.87rem;
+}
+
+footer .insta img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+footer .padding-0 {
+  padding-right: 0.3rem;
+  padding-left: 0;
+}
+
+footer .view-more {
+  font-family: "Roboto", sans-serif;
+  font-size: 13px;
+  font-style: italic;
+  display: inline;
+  cursor: pointer;
+  position: relative;
+  right: 0.7rem;
+}
+
+footer .credit p {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
+  font-size: 14px;
+}
+footer .credit span {
+  color: #e88383;
 }
