--- a/Projects/Mogo2/style/about.css
+++ b/Projects/Mogo2/style/about.css
@@ -10,8 +10,27 @@
   gap: 1rem;
 }
 
+#about .image-container {
+  max-width: 35rem;
+  width: 100%;
+}
+
 #about .image-container img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+/* =============== RESPONSIVE  =============== */
+@media only screen and (min-width: 756px) {
+  #about .image-container {
+    max-width: 50rem;
+  }
+}
+
+@media only screen and (min-width: 992px) {
+  #about .story {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
 }
