--- a/Projects/Mogo2/style/facts.css
+++ b/Projects/Mogo2/style/facts.css
@@ -2,14 +2,12 @@
   background-color: #95e1d3;
   color: #fff;
   padding: 4rem 2rem;
-  /* flex gap */
 }
 
 #facts .facts-container {
   display: grid;
   text-align: center;
   grid-row-gap: 4rem;
-  /* flex gap */
 }
 
 #facts h1 {
@@ -22,4 +20,10 @@
   font-family: "Roboto", sans-serif;
   font-size: 1rem;
   font-weight: 300;
+}
+
+@media only screen and (min-width: 600px) {
+  #facts .facts-container {
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  }
 }
