--- a/Projects/Mogo2/style/banner.css
+++ b/Projects/Mogo2/style/banner.css
@@ -26,12 +26,13 @@
   font-family: "Kaushan Script", cursive;
   font-weight: 500;
   font-size: 2.8rem;
+  font-size: clamp(2rem, 9vw, 3rem);
 }
 
 #banner h1:last-of-type {
   font-family: "Montserrat", sans-serif;
   font-weight: 800;
-  font-size: 3.5rem;
+  font-size: clamp(2rem, 11vw, 5rem);
 }
 
 #banner .divider {
