--- a/Projects/Mogo2/style/feature.css
+++ b/Projects/Mogo2/style/feature.css
@@ -21,8 +21,24 @@
   flex-direction: column;
   align-items: center;
   max-width: 32.125rem;
+  position: relative;
 }
 
-#feature .image-container img {
+#feature .image-container img:first-of-type {
   width: 100%;
+}
+
+#feature .image-container img:last-of-type {
+  position: absolute;
+  bottom: -3rem;
+  right: -5rem;
+  width: 11rem;
+  display: none;
+}
+
+/* =============== RESPONSIVE  =============== */
+@media only screen and (min-width: 700px) {
+  #feature .image-container img:last-of-type {
+    display: block;
+  }
 }
