--- a/Projects/Mogo2/style/blog.css
+++ b/Projects/Mogo2/style/blog.css
@@ -1,6 +1,13 @@
 #blog {
   padding: 4rem 2rem;
   display: flex;
+  justify-content: center;
+}
+
+#blog .blog-container {
+  width: 100%;
+  max-width: 1200px;
+  display: flex;
   flex-direction: column;
   align-items: center;
 }
@@ -10,11 +17,17 @@
   display: grid;
   justify-content: center;
   grid-row-gap: 3rem;
+  max-width: 100%;
 }
 
 #blog .blog-item {
-  max-width: 30rem;
+  width: 100%;
   position: relative;
+}
+
+#blog .blog-item .image {
+  position: relative;
+  width: 100%;
 }
 
 #blog .blog-item .image img {
@@ -77,4 +90,26 @@
   font-family: "Roboto", sans-serif;
   font-size: 15px;
   font-style: italic;
+}
+
+/* =============== RESPONSIVE  =============== */
+@media only screen and (min-width: 992px) {
+  #blog .blogs {
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-column-gap: 2rem;
+  }
+
+  #blog .box {
+    width: 3.8rem;
+    top: 5rem;
+    left: -1rem;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  #blog .box {
+    width: 3.8rem;
+    top: 5rem;
+    left: -1rem;
+  }
 }
