--- a/Projects/Mogo2/style/logo.css
+++ b/Projects/Mogo2/style/logo.css
@@ -1,6 +1,13 @@
 #logo {
   padding: 4rem 2rem;
   background: #f8f8f8;
+  display: flex;
+  justify-content: center;
+}
+
+#logo .logo-container {
+  width: 100%;
+  max-width: 1200px;
   display: grid;
   grid-template-columns: 1fr 1fr;
 }
@@ -14,4 +21,21 @@
   width: 100%;
   height: 100%;
   max-width: 10rem;
+}
+
+/* =============== RESPONSIVE  =============== */
+@media only screen and (min-width: 750px) {
+  #logo {
+    padding: 4rem 2rem;
+  }
+
+  #logo .logo-container {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+
+@media only screen and (min-width: 1120px) {
+  #logo .logo-container {
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+  }
 }
