--- a/Projects/Mogo2/style/team.css
+++ b/Projects/Mogo2/style/team.css
@@ -1,6 +1,12 @@
 #team {
   padding: 4rem 2rem;
   text-align: center;
+  display: flex;
+  justify-content: center;
+}
+
+#team .main-container {
+  max-width: 1200px;
 }
 
 #team .team-container {
@@ -34,4 +40,13 @@
   font-size: 14px;
   font-style: italic;
   color: #999999;
+}
+
+/* =============== RESPONSIVE  =============== */
+@media only screen and (min-width: 992px) {
+  #team .team-container {
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-row-gap: 0rem;
+    grid-column-gap: 1rem;
+  }
 }
