--- a/Projects/Mogo2/style/testimonial-2.css
+++ b/Projects/Mogo2/style/testimonial-2.css
@@ -1,11 +1,18 @@
 #testimonial-2 {
   padding: 4rem 2rem;
   background: #fff;
+  display: flex;
+  justify-content: center;
 }
 
-#testimonial-2 div div {
+#testimonial-2 .info .name {
   display: flex;
   margin-top: 1.5rem;
+}
+
+#testimonial-2 .testimonial-container-2 {
+  max-width: 1200px;
+  display: grid;
 }
 
 #testimonial-2 p {
@@ -26,4 +33,34 @@
   background-color: #e88383;
   position: relative;
   bottom: 1rem;
+}
+
+#testimonial-2 .avatar {
+  display: none;
+}
+
+#testimonial-2 .image {
+  border-radius: 100%;
+  overflow: hidden;
+}
+
+#testimonial-2 .image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+/* =============== RESPONSIVE  =============== */
+@media only screen and (min-width: 575px) {
+  #testimonial-2 .testimonial-container-2 {
+    grid-template-columns: 1fr 5fr;
+  }
+
+  #testimonial-2 .info {
+    padding-left: 2rem;
+  }
+
+  #testimonial-2 .avatar {
+    display: block;
+  }
 }
