--- a/Projects/Mogo2/style/header.css
+++ b/Projects/Mogo2/style/header.css
@@ -1,12 +1,19 @@
 header {
-  padding: 1rem 2rem;
+  width: 100%;
+  position: relative;
+  display: flex;
+  justify-content: center;
+}
+
+header .header-container {
+  padding: 2rem 2rem;
   position: absolute;
   width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
   color: #fff;
-  user-select: none;
+  max-width: 1200px;
 }
 
 header h1 {
